wiki: Change "\begin{figure}[.*?]" to "\begin{figure}[H]"

--- a/wiki/ui/style.tex
+++ b/wiki/ui/style.tex
@@ -2,7 +2,8 @@
 % -----
 % times for pdf generation, gives smaller pdf files.
 % But in standard postscript fonts: courier and times/helvetica do not fit.
-\usepackage{times} 
+\usepackage{times}
+\usepackage{float}
 
 \usepackage{fancyhdr}
 \lhead{}
